force-app/main/default/objects/Application_Setting__c/fields/Meetings_Values__c.field-meta.xml
<CustomField>
    <fullName>Meetings_Values__c</fullName>
    <inlineHelpText>Enter the values separated by semicolon</inlineHelpText>
    <label>Meetings Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>