force-app/main/default/objects/Application_Setting__c/fields/Object_for_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Object_for_Meeting__c</fullName>
    <defaultValue>&quot;Event&quot;</defaultValue>
    <label>Object for Meetings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Event &amp; Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>