force-app/main/default/objects/Application_Setting__c/fields/Role_Group_updated__c.field-meta.xml
<CustomField>
    <fullName>Role_Group_updated__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is used to check if the Role grouping is updated if yes important ratings are fetched from the Model</description>
    <label>Role Group updated</label>
    <type>Checkbox</type>
</CustomField>